member/css/board/board-responsive.css
@media (max-width: 1352px) {
  .task__list {
    min-height: 24px;
    max-width: 66vw;
    flex-direction: row;
    display: flex;
    overflow: auto;
    gap: 10px;
  }

  .task__title {
    width: 100%;
    overflow: hidden;
  }

  .task__text {
    width: 100%;
    max-width: 100%;
    line-height: 19px;
    max-height: 38px;
    overflow: hidden;
    overflow-wrap: anywhere;
    word-break: normal;
  }

  .task__card {
    min-width: 250px;
    min-height: 250px;
  }

  .board__tasks {
    flex-direction: column;
    max-width: 100vw;
  }

  .task {
    width: unset;
  }

  .task__area {
    min-height: 299px;
    min-width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (max-width:940px) {
  .board__search--section {
    display: flex;
    flex-direction: column-reverse;
    align-items: flex-end;
  }

  .board__header {
    display: block;
    max-width: 1160px;
  }

  .board__task {
    display: none;
  }

  .task__area {
    max-height: calc(100vh - 420px);
  }

  .board__task--mobile {
    display: block;
  }

  .board__header--title {
    padding-bottom: 0;
    margin-bottom: -52px;
    padding-left: 16px;
    font-size: 44px;
  }

  .board__search--section {
    padding-left: 16px;
  }

  .board__search--wrapper {
    width: 100%;
    display: flex;
    padding: 0;
  }

  .board__search--input {
    flex: 1;
    margin-top: 30px;
  }

  .board__search--icon,
  .board__search--wrapper::after {
    top: 67%;
  }

  .board__search--wrapper::after {
    right: 58px;
  }

  .board-add-btn {
    height: 40px;
    width: 40px;
  }

  .board-add-icon {
    margin: 0;
  }

  .task__list {
    max-width: 62vw;
  }
}

@media (max-width:830px) {
  .sidebar {
    display: none;
  }

  .board__header {
    margin: 0;
    margin-top: 170px;
  }

  main {
    margin: 0;
    padding: 0;
  }

  .task {
    width: 100%;
    padding-left: 16px;
    padding-right: 16px;
    margin-top: 20px;
  }

  .content {
    padding-bottom: 100px;
  }

  .task__list {
    width: 100%;
    max-width: 100vw;
  }

  .task__category--technical-task {
    white-space: nowrap;
  }
}

@media (max-width: 601px) {
  .board__header {
    margin: 0;
    display: flex;
    flex-direction: column;
  }

  .board__search--section {
    width: 100%;
  }

  .board__header--title {
    padding-bottom: 0;
    margin-bottom: -40px;
    padding-left: 0;
    font-size: 35px;
  }

  .board__search--wrapper {
    padding-right: 16px;
  }

  .board__top-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding-top: 57px;
    padding-left: 16px;
  }

  .board__search--icon {
    top: 67%;
    right: 37px;
  }

  .board__search--wrapper::after {
    top: 67%;
    right: 70px;
  }

  .board__tasks {
    flex-direction: column;
  }

  main {
    margin: 0;
    padding: 0;
  }

  .task {
    width: 100%;
    padding-left: 16px;
    padding-right: 16px;
    margin-top: 20px;
  }

  .task__section {
    width: 100%;
  }

  .content {
    padding-bottom: 100px;
  }

  .task__area {
    min-height: 0;
    max-height: 350px;
    margin-left: auto;
    margin-right: auto;
  }

  .task__list {
    min-height: 24px;
    align-items: center;
  }

  .task__category--technical-task {
    white-space: nowrap;
  }

  .board-add-icon {
    margin: 0;
  }

  .board-add-btn {
    margin-right: 16px;
  }
}

@media (max-width: 541px) {
  .content {
    width: 100%;
  }
}

@media (max-width: 366px) {
  .board__search--input {
    padding: 0;
  }

  input::placeholder {
    padding-left: 10px;
  }
}

/*task-overlay-content*/
@media (max-width: 992px) {
  .task-overlay-content {
    width: 369px;
  }

  .task-overlay-content h2 {
    font-size: 37px;
  }

  .task-overlay-content p {
    font-size: 20px;
  }

  .contact_avatar {
    width: 38px;
    height: 38px;
  }

  .assigned_contact,
  .overlaytemplate-subtask-checkbox,
  .taskoverlay_detail_actions button {
    font-size: 16px;
  }

  .taskoverlay_detail_actions img {
    width: 20px;
    height: 20px;
  }
}

@media (max-width: 535px) {
  .taskoverlay_detail_actions {
    padding-top: 10px;
  }

  .task-overlay-content {
    width: 281px;
  }

  .assigned_contact_name {
    max-width: 190px;
  }

  .task-overlay-content h2 {
    font-size: 26px;
  }

  .task-overlay-content p {
    font-size: 16px;
  }

  .contact_avatar {
    width: 30px;
    height: 30px;
  }

  .assigned_contact,
  .overlaytemplate-subtask-checkbox,
  .taskoverlay_detail_actions button {
    font-size: 16px;
  }

  .taskoverlay_detail_actions img {
    width: 18px;
    height: 18px;
  }

  .overlaytemplate-subtask-checkbox img {
    width: 16px;
    height: 16px;
  }
}

